// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BuyTicketButton Component matches snapshot with custom props 1`] = `
<div>
  <a
    class="custom-btn"
    href="https://example.com"
    rel="nofollow"
    target="_self"
  >
    <span
      class="demo"
    >
      Custom Text
    </span>
    <span>
      Child Node
    </span>
  </a>
</div>
`;

exports[`BuyTicketButton Component matches snapshot with default props 1`] = `
<div>
  <a
    class="vl-btn8"
    href="https://tickets.devbcn.com/event/devbcn-2026"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="demo"
    >
      Buy Ticket Now
    </span>
  </a>
</div>
`;
